[package]
name = "tokio-runtime-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
tokio-stream = { version = "0.1", features = ["time"] }
lapin = { version = "2", default-features = false }
tokio = { version = "1.0", features = ["full"] }
azuqua_core_queue_service = { git = "ssh://git@github.com/azuqua/azuqua-core-rs", branch = "release-4.17" }

[[bin]]
name = "shared"
path = "src/server/bin/shared-runtime.rs"

[[bin]]
name = "exclusive"
path = "src/server/bin/exclusive-runtime.rs"

[[bin]]
name = "client"
path = "src/client/bin/main.rs"